--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -5,7 +5,7 @@
         <div class="card-body">
           <h3>Welcome {{user.fullname}}</h3>
           <h4>{{user.username}}</h4>
-          <a href="" class="btn btn-primary m-4">Save your links</a>
+          <a href="/links/add" class="btn btn-primary m-4">Save your links</a>
         </div>
       </div>
     </div>
